20070325
 - (dtucker) [Makefile.in configure.ac] Replace single-purpose LIBSELINUX,
   LIBWRAP and LIBPAM variables in Makefile with the general-purpose
   SSHDLIBS.  "I like" djm@

20070321
 - (dtucker) OpenBSD CVS Sync
   - dtucker@cvs.openbsd.org 2007/03/09 05:20:06
     [servconf.c sshd.c]
     Move C/R -> kbdint special case to after the defaults have been
     loaded, which makes ChallengeResponse default to yes again.  This
     was broken by the Match changes and not fixed properly subsequently.
     Found by okan at demirmen.com, ok djm@ "please do it" deraadt@
   - djm@cvs.openbsd.org 2007/03/19 01:01:29
     [sshd_config]
     Disable the legacy SSH protocol 1 for new installations via
     a configuration override. In the future, we will change the
     server's default itself so users who need the legacy protocol
     will need to turn it on explicitly
   - dtucker@cvs.openbsd.org 2007/03/19 12:16:42
     [ssh-agent.c]
     Remove the signal handler that checks if the agent's parent process
     has gone away, instead check when the select loop returns.  Record when
     the next key will expire when scanning for expired keys.  Set the select
     timeout to whichever of these two things happens next.  With djm@, with &
     ok deraadt@ markus@
   - tedu@cvs.openbsd.org 2007/03/20 03:56:12
     [readconf.c clientloop.c]
     remove some bogus *p tests from charles longeau
     ok deraadt millert
   - jmc@cvs.openbsd.org 2007/03/20 15:57:15
     [sshd.8]
     - let synopsis and description agree for -f
     - sort FILES
     - +.Xr ssh-keyscan 1 ,
     from Igor Sobrado
 - (dtucker) [configure.ac openbsd-compat/bsd-getpeereid.c] Bug #1287: Use
   getpeerucred to implement getpeereid (currently only Solaris 10 and up).
   Patch by Jan.Pechanec at Sun.
 - (dtucker) [regress/agent-getpeereid.sh] Do peereid test if we have
   HAVE_GETPEERUCRED too.  Also from Jan Pechanec.

20070313