@@ -1,3 +1,8 @@
+20070326
+ - (tim) [auth.c configure.ac defines.h session.c openbsd-compat/port-uw.c
+   openbsd-compat/port-uw.h openbsd-compat/xcrypt.c] Rework libiaf test/defines
+   to account for IRIX having libiaf but not set_id(). Patch with & ok dtucker@
+
 20070325
  - (dtucker) [Makefile.in configure.ac] Replace single-purpose LIBSELINUX,
    LIBWRAP and LIBPAM variables in Makefile with the general-purpose
@@ -2868,4 +2873,4 @@
    OpenServer 6 and add osr5bigcrypt support so when someone migrates
    passwords between UnixWare and OpenServer they will still work. OK dtucker@
 
-$Id: ChangeLog,v 1.4648 2007/03/25 08:26:01 dtucker Exp $
+$Id: ChangeLog,v 1.4649 2007/03/26 16:35:28 tim Exp $
